--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,7 @@
 [project]
-name = "ln"
+name = "memoize"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "python-dotenv>=1.2.1",
-    "requests>=2.32.5",
-]
+dependencies = ["python-dotenv>=1.2.1", "requests>=2.32.5", "rich>=14.3.2"]
